--- a/Konyvtar/Client/Pages/Index.razor
+++ b/Konyvtar/Client/Pages/Index.razor
@@ -1,4 +1,4 @@
-﻿@page "/"
+﻿@page "/home"
 
 <PageTitle>Index</PageTitle>
 
@@ -6,4 +6,3 @@
 
 Welcome to your new app.
 
-<SurveyPrompt Title="How is Blazor working for you?" />
