Könyvtáros felület, könyv hozzáadása, könyv kölcsönzése, fix '.' in class names

--- a/Konyvtar.Konyvtaros/Shared/MainLayout.razor
+++ b/Konyvtar.Konyvtaros/Shared/MainLayout.razor
@@ -5,13 +5,13 @@
         <NavMenu />
     </div>
 
-    <main>
-        <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+    <div class="main">
+        <div class="top-row px-4 justify-content-right">
+            <p class="text-lg-right pt-3">@DateTime.Now.ToShortDateString()</p>
         </div>
 
-        <article class="content px-4">
+        <div class="content px-4">
             @Body
-        </article>
-    </main>
+        </div>
+    </div>
 </div>
