--- a/Konyvtar.Konyvtaros/_Imports.razor
+++ b/Konyvtar.Konyvtaros/_Imports.razor
@@ -6,5 +6,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using Konyvtar.Konyvtaros
-@using Konyvtar.Konyvtaros.Shared
+@using KonyvtarLibrarian
+@using KonyvtarLibrarian.Shared
