--- a/Konyvtar.Librarian/Pages/BookDetails.razor
+++ b/Konyvtar.Librarian/Pages/BookDetails.razor
@@ -7,21 +7,42 @@
 else
 {
     <div class="form-group row">
-        <label class="col-sm-4 col-form-label">Title</label>
+        <label class="col-sm-8 col-form-label">Title</label>
         <div class="col-sm-8">
             <label type="text" class="form-control-plaintext">@Book.Title</label>
         </div>
     </div>
 
     <div class="form-group row">
-        <label class="col-sm-4 col-form-label">Author</label>
+        <label class="col-sm-8 col-form-label">Author</label>
         <div class="col-sm-8">
             <label type="text" readonly class="form-control-plaintext">@Book.Author</label>
         </div>
     </div>
 
     <div class="form-group row">
-        <label class="col-sm-4 col-form-label">Rental Status</label>
+        <label class="col-sm-8 col-form-label">Publisher</label>
+        <div class="col-sm-8">
+            <label type="text" readonly class="form-control-plaintext">@Book.Publisher</label>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <label class="col-sm-8 col-form-label">AccessionNumber</label>
+        <div class="col-sm-8">
+            <label type="text" readonly class="form-control-plaintext">@Book.AccessionNumber</label>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <label class="col-sm-8 col-form-label">YearOfPublication</label>
+        <div class="col-sm-8">
+            <label type="text" readonly class="form-control-plaintext">@Book.YearOfPublication</label>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <label class="col-sm-8 col-form-label">Rental Status</label>
         <div class="col-sm-8">
             @if (Book.IsBorrowed)
             {
