--- a/Konyvtar.Librarian/Pages/BookDetails.razor
+++ b/Konyvtar.Librarian/Pages/BookDetails.razor
@@ -73,9 +73,19 @@ else
 
         <div class="form-group row">
             <label class="col-sm-4 col-form-label">Date of Return</label>
-            <div class="col-sm-8">
-                <label type="text" readonly class="form-control-plaintext">@Book.DateOfReturn.ToShortDateString()</label>
-            </div>
+            @if (Book.DateOfReturn > DateTime.Now)
+            {
+                <div class="col-sm-8">
+                    <label type="text" readonly class="form-control-plaintext">@Book.DateOfReturn.ToShortDateString()</label>
+                </div>
+            }
+            else
+            {
+                <div class="col-sm-8">
+                    <label style="color:red; font-weight:bold" type="text" readonly class="form-control-plaintext">@Book.DateOfReturn.ToShortDateString()</label>
+                </div>
+            }
+            
         </div>
     }
 
