--- a/Konyvtar.Librarian/Shared/NavMenu.razor
+++ b/Konyvtar.Librarian/Shared/NavMenu.razor
@@ -17,6 +17,16 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> Add Book
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="members">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Members
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="addmembers">
+                <span class="oi oi-plus" aria-hidden="true"></span> Add Members
+            </NavLink>
+        </li>
     </ul>
 </div>
 
